parser/lexer.go
//line lexer.rl:1
// Copyright (c) DataStax, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package parser

type token int

const (
	tkInvalid token = iota
	tkEOF
	tkSelect
	tkInsert
	tkUpdate
	tkDelete
	tkBegin
	tkApply
	tkBatch
	tkCreate
	tkAlter
	tkDrop
	tkInto
	tkFrom
	tkUse
	tkUsing
	tkIf
	tkWhere
	tkAnd
	tkToken
	tkIs
	tkIn
	tkNot
	tkIdentifier
	tkStar
	tkComma
	tkDot
	tkColon
	tkQMark
	tkEqual
	tkAdd
	tkSub
	tkAddEqual
	tkSubEqual
	tkNotEqual
	tkGt
	tkLt
	tkLtEqual
	tkGtEqual
	tkLparen
	tkRparen
	tkLsquare
	tkRsquare
	tkLcurly
	tkRcurly
	tkInteger
	tkFloat
	tkBool
	tkNull
	tkStringLiteral
	tkHexNumber
	tkUuid
	tkDuration
	tkNan
	tkInfinity
	tkEOS
)

const (
	tkLangle = tkLt
	tkRangle = tkGt
)

//line lexer.go:88
const lex_start int = 90
const lex_first_final int = 90
const lex_error int = -1

const lex_en_main int = 90

//line lexer.rl:87

type lexer struct {
	data     string
	p, pe, m int
	id       string
}

// initialize/reset lexer with data string to lex
func (l *lexer) init(data string) {
	l.p, l.pe = 0, len(data)
	l.data = data
}

// mark the current lexer position
func (l *lexer) mark() {
	l.m = l.p
}

// rewind position to the the previously marked position
func (l *lexer) rewind() {
	l.p = l.m
}

// get the value of an identifier if that's the current token; otherwise, it's undefined
func (l *lexer) identifier() Identifier {
	return IdentifierFromString(l.id)
}

// get the value of an identifier as a string if that's the current token; otherwise, it's undefined
func (l *lexer) identifierStr() string {
	return l.id
}

// move to the next token
func (l *lexer) next() token {
	data := l.data
	p, pe, eof := l.p, l.pe, l.pe
	act, ts, te, cs := 0, 0, 0, -1

	tk := tkInvalid

	if p == eof {
		return tkEOF
	}

//line lexer.go:144
	{
		cs = lex_start
		ts = 0
		te = 0
		act = 0
	}

//line lexer.go:152
	{
		if p == pe {
			goto _test_eof
		}
		switch cs {
		case 90:
			goto st_case_90
		case 91:
			goto st_case_91
		case 92:
			goto st_case_92
		case 93:
			goto st_case_93
		case 0:
			goto st_case_0
		case 1:
			goto st_case_1
		case 94:
			goto st_case_94
		case 2:
			goto st_case_2
		case 95:
			goto st_case_95
		case 96:
			goto st_case_96
		case 3:
			goto st_case_3
		case 97:
			goto st_case_97
		case 98:
			goto st_case_98
		case 99:
			goto st_case_99
		case 100:
			goto st_case_100
		case 101:
			goto st_case_101
		case 4:
			goto st_case_4
		case 5:
			goto st_case_5
		case 102:
			goto st_case_102
		case 103:
			goto st_case_103
		case 6:
			goto st_case_6
		case 104:
			goto st_case_104
		case 7:
			goto st_case_7
		case 8:
			goto st_case_8
		case 9:
			goto st_case_9
		case 10:
			goto st_case_10
		case 11:
			goto st_case_11
		case 12:
			goto st_case_12
		case 13:
			goto st_case_13
		case 14:
			goto st_case_14
		case 15:
			goto st_case_15
		case 16:
			goto st_case_16
		case 17:
			goto st_case_17
		case 105:
			goto st_case_105
		case 18:
			goto st_case_18
		case 19:
			goto st_case_19
		case 20:
			goto st_case_20
		case 21:
			goto st_case_21
		case 22:
			goto st_case_22
		case 23:
			goto st_case_23
		case 24:
			goto st_case_24
		case 25:
			goto st_case_25
		case 26:
			goto st_case_26
		case 27:
			goto st_case_27
		case 28:
			goto st_case_28
		case 29:
			goto st_case_29
		case 30:
			goto st_case_30
		case 31:
			goto st_case_31
		case 32:
			goto st_case_32
		case 33:
			goto st_case_33
		case 34:
			goto st_case_34
		case 35:
			goto st_case_35
		case 36:
			goto st_case_36
		case 106:
			goto st_case_106
		case 107:
			goto st_case_107
		case 37:
			goto st_case_37
		case 108:
			goto st_case_108
		case 38:
			goto st_case_38
		case 109:
			goto st_case_109
		case 39:
			goto st_case_39
		case 110:
			goto st_case_110
		case 40:
			goto st_case_40
		case 111:
			goto st_case_111
		case 41:
			goto st_case_41
		case 112:
			goto st_case_112
		case 113:
			goto st_case_113
		case 114:
			goto st_case_114
		case 115:
			goto st_case_115
		case 116:
			goto st_case_116
		case 117:
			goto st_case_117
		case 118:
			goto st_case_118
		case 119:
			goto st_case_119
		case 42:
			goto st_case_42
		case 43:
			goto st_case_43
		case 44:
			goto st_case_44
		case 45:
			goto st_case_45
		case 46:
			goto st_case_46
		case 47:
			goto st_case_47
		case 48:
			goto st_case_48
		case 49:
			goto st_case_49
		case 50:
			goto st_case_50
		case 51:
			goto st_case_51
		case 52:
			goto st_case_52
		case 53:
			goto st_case_53
		case 54:
			goto st_case_54
		case 55:
			goto st_case_55
		case 56:
			goto st_case_56
		case 57:
			goto st_case_57
		case 58:
			goto st_case_58
		case 59:
			goto st_case_59
		case 60:
			goto st_case_60
		case 61:
			goto st_case_61
		case 62:
			goto st_case_62
		case 63:
			goto st_case_63
		case 64:
			goto st_case_64
		case 65:
			goto st_case_65
		case 66:
			goto st_case_66
		case 67:
			goto st_case_67
		case 68:
			goto st_case_68
		case 69:
			goto st_case_69
		case 120:
			goto st_case_120
		case 70:
			goto st_case_70
		case 71:
			goto st_case_71
		case 121:
			goto st_case_121
		case 122:
			goto st_case_122
		case 123:
			goto st_case_123
		case 124:
			goto st_case_124
		case 72:
			goto st_case_72
		case 125:
			goto st_case_125
		case 73:
			goto st_case_73
		case 74:
			goto st_case_74
		case 126:
			goto st_case_126
		case 75:
			goto st_case_75
		case 127:
			goto st_case_127
		case 76:
			goto st_case_76
		case 77:
			goto st_case_77
		case 128:
			goto st_case_128
		case 78:
			goto st_case_78
		case 129:
			goto st_case_129
		case 79:
			goto st_case_79
		case 80:
			goto st_case_80
		case 130:
			goto st_case_130
		case 81:
			goto st_case_81
		case 131:
			goto st_case_131
		case 82:
			goto st_case_82
		case 83:
			goto st_case_83
		case 132:
			goto st_case_132
		case 84:
			goto st_case_84
		case 133:
			goto st_case_133
		case 85:
			goto st_case_85
		case 86:
			goto st_case_86
		case 134:
			goto st_case_134
		case 87:
			goto st_case_87
		case 135:
			goto st_case_135
		case 88:
			goto st_case_88
		case 89:
			goto st_case_89
		case 136:
			goto st_case_136
		case 137:
			goto st_case_137
		case 138:
			goto st_case_138
		case 139:
			goto st_case_139
		case 140:
			goto st_case_140
		case 141:
			goto st_case_141
		case 142:
			goto st_case_142
		case 143:
			goto st_case_143
		case 144:
			goto st_case_144
		case 145:
			goto st_case_145
		case 146:
			goto st_case_146
		case 147:
			goto st_case_147
		case 148:
			goto st_case_148
		case 149:
			goto st_case_149
		case 150:
			goto st_case_150
		case 151:
			goto st_case_151
		case 152:
			goto st_case_152
		case 153:
			goto st_case_153
		case 154:
			goto st_case_154
		case 155:
			goto st_case_155
		case 156:
			goto st_case_156
		case 157:
			goto st_case_157
		case 158:
			goto st_case_158
		case 159:
			goto st_case_159
		case 160:
			goto st_case_160
		case 161:
			goto st_case_161
		case 162:
			goto st_case_162
		case 163:
			goto st_case_163
		case 164:
			goto st_case_164
		case 165:
			goto st_case_165
		case 166:
			goto st_case_166
		case 167:
			goto st_case_167
		case 168:
			goto st_case_168
		case 169:
			goto st_case_169
		case 170:
			goto st_case_170
		case 171:
			goto st_case_171
		case 172:
			goto st_case_172
		case 173:
			goto st_case_173
		case 174:
			goto st_case_174
		case 175:
			goto st_case_175
		case 176:
			goto st_case_176
		case 177:
			goto st_case_177
		case 178:
			goto st_case_178
		case 179:
			goto st_case_179
		case 180:
			goto st_case_180
		case 181:
			goto st_case_181
		case 182:
			goto st_case_182
		case 183:
			goto st_case_183
		case 184:
			goto st_case_184
		case 185:
			goto st_case_185
		case 186:
			goto st_case_186
		case 187:
			goto st_case_187
		case 188:
			goto st_case_188
		case 189:
			goto st_case_189
		case 190:
			goto st_case_190
		case 191:
			goto st_case_191
		case 192:
			goto st_case_192
		case 193:
			goto st_case_193
		case 194:
			goto st_case_194
		case 195:
			goto st_case_195
		case 196:
			goto st_case_196
		case 197:
			goto st_case_197
		case 198:
			goto st_case_198
		case 199:
			goto st_case_199
		case 200:
			goto st_case_200
		case 201:
			goto st_case_201
		case 202:
			goto st_case_202
		case 203:
			goto st_case_203
		case 204:
			goto st_case_204
		case 205:
			goto st_case_205
		case 206:
			goto st_case_206
		case 207:
			goto st_case_207
		case 208:
			goto st_case_208
		case 209:
			goto st_case_209
		case 210:
			goto st_case_210
		case 211:
			goto st_case_211
		case 212:
			goto st_case_212
		case 213:
			goto st_case_213
		case 214:
			goto st_case_214
		case 215:
			goto st_case_215
		case 216:
			goto st_case_216
		case 217:
			goto st_case_217
		case 218:
			goto st_case_218
		case 219:
			goto st_case_219
		case 220:
			goto st_case_220
		case 221:
			goto st_case_221
		case 222:
			goto st_case_222
		case 223:
			goto st_case_223
		case 224:
			goto st_case_224
		case 225:
			goto st_case_225
		case 226:
			goto st_case_226
		case 227:
			goto st_case_227
		case 228:
			goto st_case_228
		case 229:
			goto st_case_229
		case 230:
			goto st_case_230
		case 231:
			goto st_case_231
		case 232:
			goto st_case_232
		case 233:
			goto st_case_233
		case 234:
			goto st_case_234
		case 235:
			goto st_case_235
		case 236:
			goto st_case_236
		case 237:
			goto st_case_237
		}
		goto st_out
	tr0:
//line NONE:1
		switch act {
		case 1:
			{
				p = (te) - 1
				tk = tkSelect
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 2:
			{
				p = (te) - 1
				tk = tkInsert
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 3:
			{
				p = (te) - 1
				tk = tkUpdate
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 4:
			{
				p = (te) - 1
				tk = tkDelete
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 5:
			{
				p = (te) - 1
				tk = tkBatch
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 6:
			{
				p = (te) - 1
				tk = tkBegin
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 7:
			{
				p = (te) - 1
				tk = tkApply
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 8:
			{
				p = (te) - 1
				tk = tkCreate
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 9:
			{
				p = (te) - 1
				tk = tkAlter
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 10:
			{
				p = (te) - 1
				tk = tkDrop
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 11:
			{
				p = (te) - 1
				tk = tkInto
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 12:
			{
				p = (te) - 1
				tk = tkFrom
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 13:
			{
				p = (te) - 1
				tk = tkUse
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 14:
			{
				p = (te) - 1
				tk = tkUsing
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 15:
			{
				p = (te) - 1
				tk = tkIf
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 16:
			{
				p = (te) - 1
				tk = tkWhere
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 17:
			{
				p = (te) - 1
				tk = tkAnd
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 18:
			{
				p = (te) - 1
				tk = tkIs
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 20:
			{
				p = (te) - 1
				tk = tkNot
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 21:
			{
				p = (te) - 1
				tk = tkToken
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 22:
			{
				p = (te) - 1
				tk = tkBool
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 23:
			{
				p = (te) - 1
				tk = tkNull
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 45:
			{
				p = (te) - 1
				tk = tkNan
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 46:
			{
				p = (te) - 1
				tk = tkInfinity
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 48:
			{
				p = (te) - 1
				tk = tkStringLiteral
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 49:
			{
				p = (te) - 1
				tk = tkInteger
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 50:
			{
				p = (te) - 1
				tk = tkFloat
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 52:
			{
				p = (te) - 1
				tk = tkDuration
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 54:
			{
				p = (te) - 1
				tk = tkIdentifier
				l.id = l.data[ts:te]
				{
					p++
					cs = 90
					goto _out
				}
			}
		case 57:
			{
				p = (te) - 1
				tk = tkInvalid
				{
					p++
					cs = 90
					goto _out
				}
			}
		}

		goto st90
	tr2:
//line lexer.rl:204
		te = p + 1
		{
			tk = tkIdentifier
			l.id = l.data[ts:te]
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr11:
//line lexer.rl:202
		p = (te) - 1
		{
			tk = tkDuration
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr17:
//line lexer.rl:192
		p = (te) - 1
		{
			tk = tkSub
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr24:
//line lexer.rl:196
		te = p + 1
		{
			tk = tkInfinity
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr26:
//line lexer.rl:195
		te = p + 1
		{
			tk = tkNan
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr30:
//line lexer.rl:202
		te = p + 1
		{
			tk = tkDuration
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr82:
//line lexer.rl:203
		te = p + 1
		{
			tk = tkUuid
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr84:
//line lexer.rl:199
		p = (te) - 1
		{
			tk = tkInteger
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr109:
//line lexer.rl:207
		te = p + 1
		{
			tk = tkInvalid
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr110:
//line lexer.rl:206
		te = p + 1
		{ /* Skip */
		}
		goto st90
	tr111:
//line lexer.rl:205
		te = p + 1
		{ /* Skip */
		}
		goto st90
	tr117:
//line lexer.rl:179
		te = p + 1
		{
			tk = tkLparen
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr118:
//line lexer.rl:180
		te = p + 1
		{
			tk = tkRparen
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr119:
//line lexer.rl:174
		te = p + 1
		{
			tk = tkStar
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr121:
//line lexer.rl:175
		te = p + 1
		{
			tk = tkComma
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr123:
//line lexer.rl:176
		te = p + 1
		{
			tk = tkDot
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr126:
//line lexer.rl:177
		te = p + 1
		{
			tk = tkColon
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr127:
//line lexer.rl:197
		te = p + 1
		{
			tk = tkEOS
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr129:
//line lexer.rl:185
		te = p + 1
		{
			tk = tkEqual
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr131:
//line lexer.rl:178
		te = p + 1
		{
			tk = tkQMark
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr146:
//line lexer.rl:181
		te = p + 1
		{
			tk = tkLsquare
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr147:
//line lexer.rl:182
		te = p + 1
		{
			tk = tkRsquare
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr148:
//line lexer.rl:183
		te = p + 1
		{
			tk = tkLcurly
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr149:
//line lexer.rl:184
		te = p + 1
		{
			tk = tkRcurly
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr150:
//line lexer.rl:207
		te = p
		p--
		{
			tk = tkInvalid
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr151:
//line lexer.rl:190
		te = p + 1
		{
			tk = tkNotEqual
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr152:
//line lexer.rl:198
		te = p
		p--
		{
			tk = tkStringLiteral
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr153:
//line lexer.rl:191
		te = p
		p--
		{
			tk = tkAdd
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr154:
//line lexer.rl:193
		te = p + 1
		{
			tk = tkAddEqual
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr155:
//line lexer.rl:192
		te = p
		p--
		{
			tk = tkSub
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr157:
//line lexer.rl:194
		te = p + 1
		{
			tk = tkSubEqual
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr161:
//line lexer.rl:199
		te = p
		p--
		{
			tk = tkInteger
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr164:
//line lexer.rl:200
		te = p
		p--
		{
			tk = tkFloat
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr165:
//line lexer.rl:202
		te = p
		p--
		{
			tk = tkDuration
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr190:
//line lexer.rl:201
		te = p
		p--
		{
			tk = tkHexNumber
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr191:
//line lexer.rl:188
		te = p
		p--
		{
			tk = tkLt
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr192:
//line lexer.rl:186
		te = p + 1
		{
			tk = tkLtEqual
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr193:
//line lexer.rl:189
		te = p
		p--
		{
			tk = tkGt
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr194:
//line lexer.rl:187
		te = p + 1
		{
			tk = tkGtEqual
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr195:
//line lexer.rl:204
		te = p
		p--
		{
			tk = tkIdentifier
			l.id = l.data[ts:te]
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	tr244:
//line lexer.rl:169
		te = p
		p--
		{
			tk = tkIn
			{
				p++
				cs = 90
				goto _out
			}
		}
		goto st90
	st90:
//line NONE:1
		ts = 0

		if p++; p == pe {
			goto _test_eof90
		}
	st_case_90:
//line NONE:1
		ts = p

//line lexer.go:960
		switch data[p] {
		case 9:
			goto tr110
		case 10:
			goto tr111
		case 13:
			goto st91
		case 32:
			goto tr110
		case 33:
			goto st92
		case 34:
			goto tr114
		case 36:
			goto tr115
		case 39:
			goto tr116
		case 40:
			goto tr117
		case 41:
			goto tr118
		case 42:
			goto tr119
		case 43:
			goto st98
		case 44:
			goto tr121
		case 45:
			goto tr122
		case 46:
			goto tr123
		case 48:
			goto tr124
		case 58:
			goto tr126
		case 59:
			goto tr127
		case 60:
			goto st139
		case 61:
			goto tr129
		case 62:
			goto st140
		case 63:
			goto tr131
		case 65:
			goto st141
		case 66:
			goto st157
		case 67:
			goto st164
		case 68:
			goto st169
		case 69:
			goto st176
		case 70:
			goto st177
		case 73:
			goto st183
		case 78:
			goto st194
		case 80:
			goto st199
		case 83:
			goto st216
		case 84:
			goto st221
		case 85:
			goto st226
		case 87:
			goto st234
		case 91:
			goto tr146
		case 93:
			goto tr147
		case 97:
			goto st141
		case 98:
			goto st157
		case 99:
			goto st164
		case 100:
			goto st169
		case 101:
			goto st176
		case 102:
			goto st177
		case 105:
			goto st183
		case 110:
			goto st194
		case 115:
			goto st216
		case 116:
			goto st221
		case 117:
			goto st226
		case 119:
			goto st234
		case 123:
			goto tr148
		case 125:
			goto tr149
		}
		switch {
		case data[p] < 71:
			if 49 <= data[p] && data[p] <= 57 {
				goto tr125
			}
		case data[p] > 90:
			if 103 <= data[p] && data[p] <= 122 {
				goto tr138
			}
		default:
			goto tr138
		}
		goto tr109
	st91:
		if p++; p == pe {
			goto _test_eof91
		}
	st_case_91:
		if data[p] == 10 {
			goto tr111
		}
		goto tr150
	st92:
		if p++; p == pe {
			goto _test_eof92
		}
	st_case_92:
		if data[p] == 61 {
			goto tr151
		}
		goto tr150
	tr4:
//line NONE:1
		te = p + 1

//line lexer.rl:204
		act = 54
		goto st93
	tr114:
//line NONE:1
		te = p + 1

//line lexer.rl:207
		act = 57
		goto st93
	st93:
		if p++; p == pe {
			goto _test_eof93
		}
	st_case_93:
//line lexer.go:1115
		switch data[p] {
		case 10:
			goto tr0
		case 13:
			goto tr0
		case 34:
			goto tr2
		case 92:
			goto st1
		}
		goto st0
	st0:
		if p++; p == pe {
			goto _test_eof0
		}
	st_case_0:
		switch data[p] {
		case 10:
			goto tr0
		case 13:
			goto tr0
		case 34:
			goto tr2
		case 92:
			goto st1
		}
		goto st0
	st1:
		if p++; p == pe {
			goto _test_eof1
		}
	st_case_1:
		switch data[p] {
		case 10:
			goto tr0
		case 13:
			goto tr0
		case 34:
			goto tr4
		case 92:
			goto st1
		}
		goto st0
	tr115:
//line NONE:1
		te = p + 1

//line lexer.rl:207
		act = 57
		goto st94
	st94:
		if p++; p == pe {
			goto _test_eof94
		}
	st_case_94:
//line lexer.go:1171
		if data[p] == 36 {
			goto tr6
		}
		goto st2
	st2:
		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
		if data[p] == 36 {
			goto tr6
		}
		goto st2
	tr6:
//line NONE:1
		te = p + 1

//line lexer.rl:198
		act = 48
		goto st95
	st95:
		if p++; p == pe {
			goto _test_eof95
		}
	st_case_95:
//line lexer.go:1197
		if data[p] == 36 {
			goto st2
		}
		goto tr152
	tr116:
//line NONE:1
		te = p + 1

//line lexer.rl:207
		act = 57
		goto st96
	st96:
		if p++; p == pe {
			goto _test_eof96
		}
	st_case_96:
//line lexer.go:1214
		if data[p] == 39 {
			goto tr8
		}
		goto st3
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
		if data[p] == 39 {
			goto tr8
		}
		goto st3
	tr8:
//line NONE:1
		te = p + 1

//line lexer.rl:198
		act = 48
		goto st97
	st97:
		if p++; p == pe {
			goto _test_eof97
		}
	st_case_97:
//line lexer.go:1240
		if data[p] == 39 {
			goto st3
		}
		goto tr152
	st98:
		if p++; p == pe {
			goto _test_eof98
		}
	st_case_98:
		if data[p] == 61 {
			goto tr154
		}
		goto tr153
	tr122:
//line NONE:1
		te = p + 1

		goto st99
	st99:
		if p++; p == pe {
			goto _test_eof99
		}
	st_case_99:
//line lexer.go:1264
		switch data[p] {
		case 61:
			goto tr157
		case 73:
			goto st9
		case 78:
			goto st16
		case 80:
			goto tr160
		case 105:
			goto st9
		case 110:
			goto st16
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr156
		}
		goto tr155
	tr156:
//line NONE:1
		te = p + 1
